# Legal_DB_PoC

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  Test_logs.xlsx  docker-compose.yml  document_parsing.py  privacy_idx.index  privacy_store.json  pyproject.toml
.devcontainer/: devcontainer.json
app/: Tools.py  __init__.py  _faiss.py  faissDB.py  legal_agent.py  llm_keyword_extractor.py  llm_summary.py  rerank_api.py  rerank_api_Version2 (1).py  state_types.py
scripts/: start_rerank_api.sh
