[tool.poetry]
name = "legal-db-poc"
version = "0.1.0"
description = "Legal Database Proof of Concept with RAG and LLM"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
transformers = "^4.46.0"
torch = "^2.5.0"
faiss-cpu = "^1.9.0"
numpy = "^1.26.0"
requests = "^2.32.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langgraph = "^0.2.0"
pypdf = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.10.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
